Börjat med tabellen
Här la jag in div för grid och h1 för vinnaren. Skapade en grid i css med 6x7 layout och bestämde färgen för spelaren och vem som börjar först, currentPlayer. La även till column och rad för att loopa igenom senare.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <script src="index.js"></script>
+    <h1 id="winner"></h1>
+    <div id="table"></div>
+    <script src="index.js">
+    </script>
 </body>
 
 </html>
