Starta om spelet funktion
Med denna funktion startas spelet om igen med en knapp från html. Efter en spel runda så kan man starta om spelet med en knapp!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <button id="start">Restart game?</button>
     <h1 id="winner"></h1>
     <div id="table"></div>
     <script src="index.js">
