--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div id="points">
+        <h1 id="blue">0</h1>
+        <h1 id="red">0</h1>
+    </div>
     <button id="start">Restart game?</button>
     <h1 id="winner"></h1>
     <div id="table"></div>
