--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
 <body>
     <div id="points">
-        <h1 id="blue">0</h1>
-        <h1 id="red">0</h1>
+        <div id="left">
+            <h2 id="playerOne"></h2>
+            <h1 id="blue">0</h1>
+        </div>
+        <div id="right">
+            <h2 id="playerTwo"></h2>
+            <h1 id="red">0</h1>
+        </div>
     </div>
     <button id="start">Restart game?</button>
     <h1 id="winner"></h1>
