--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <button id="start">Restart game?</button>
     <h1 id="winner"></h1>
     <div id="table"></div>
+    <h1 id="frad">Fyra i rad/Four in a row</h1>
     <script src="index.js">
     </script>
 </body>
