Länk till github
Här la jag in länken till github och stylade den med css.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="https://github.com/philles85/DDU2--projekt-4inrow" target="_blank">Click here for github!</a>
     <div id="points">
         <div id="left">
             <h2 id="playerOne"></h2>
